# slack-ring-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: bot.py  ring_auth.py  slack_client.py  utils.py
